Add available input to task dto